Layout of User Profile and Car User SignUp Validation

--- a/app/src/main/res/layout/fragment_car.xml
+++ b/app/src/main/res/layout/fragment_car.xml
@@ -12,90 +12,61 @@
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorAccent">
+        android:background="@drawable/back">
 
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="95dp"
-            android:layout_height="26dp"
-            android:layout_below="@+id/brandText"
+        <com.gcherubini.animatedexpandableedittext.AnimatedExpandableEditText
+            android:id="@+id/brandText"
+            android:layout_width="380dp"
+            android:layout_height="35dp"
             android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="100dp"
             android:layout_marginEnd="8dp"
-            android:text="Marca"
-            android:textAlignment="viewStart"
-            android:textColor="@color/colorPrimary"
-            android:textStyle="bold"
+            android:background="@drawable/edit_text_bg"
+            android:ems="10"
+            android:hint="Marca"
+            android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.17"
+            app:layout_constraintHorizontal_bias="0.533"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="95dp"
-            android:layout_height="26dp"
-            android:layout_alignStart="@+id/canSmoke"
+        <com.gcherubini.animatedexpandableedittext.AnimatedExpandableEditText
+            android:id="@+id/modelText"
+            android:layout_width="380dp"
+            android:layout_height="35dp"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="2dp"
             android:layout_marginEnd="8dp"
-            android:text="Modelo"
-            android:textColor="@color/colorPrimary"
-            android:textStyle="bold"
+            android:background="@drawable/edit_text_bg"
+            android:ems="10"
+            android:hint="Modelo"
+            android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.17"
+            app:layout_constraintHorizontal_bias="0.533"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/brandText" />
 
-        <EditText
-            android:id="@+id/brandText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.281"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView6" />
-
-        <EditText
-            android:id="@+id/modelText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.281"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
-        <EditText
+        <com.gcherubini.animatedexpandableedittext.AnimatedExpandableEditText
             android:id="@+id/seatsText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="380dp"
+            android:layout_height="35dp"
             android:layout_alignStart="@+id/brandText"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="2dp"
             android:layout_marginEnd="8dp"
+            android:background="@drawable/edit_text_bg"
             android:ems="10"
+            android:hint="Lugares"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.281"
+            app:layout_constraintHorizontal_bias="0.533"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+            app:layout_constraintTop_toBottomOf="@+id/modelText" />
 
         <Switch
             android:id="@+id/canSmoke"
@@ -103,15 +74,15 @@
             android:layout_height="31dp"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="40dp"
             android:layout_marginEnd="8dp"
             android:layout_toEndOf="@+id/modelText"
             android:text="Fumador"
             android:textAllCaps="false"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorAccent"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.278"
+            app:layout_constraintHorizontal_bias="0.48"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/plateText" />
 
@@ -126,62 +97,28 @@
             android:layout_marginEnd="8dp"
             android:text="Possível levar Animais"
             android:textAlignment="viewStart"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorAccent"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.278"
+            app:layout_constraintHorizontal_bias="0.48"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/canSmoke" />
 
-        <EditText
+        <com.gcherubini.animatedexpandableedittext.AnimatedExpandableEditText
             android:id="@+id/plateText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="380dp"
+            android:layout_height="35dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="2dp"
             android:layout_marginEnd="8dp"
+            android:background="@drawable/edit_text_bg"
             android:ems="10"
+            android:hint="Lugares"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.281"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView8" />
-
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="95dp"
-            android:layout_height="26dp"
-            android:layout_alignEnd="@+id/canTakePets"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="8dp"
-            android:text="Lugares"
-            android:textAlignment="viewStart"
-            android:textColor="@color/colorPrimary"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.17"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/modelText" />
-
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="95dp"
-            android:layout_height="26dp"
-            android:layout_alignBottom="@+id/canTakePets"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="8dp"
-            android:layout_toEndOf="@+id/saveButton"
-            android:text="Matrícula"
-            android:textAlignment="viewStart"
-            android:textColor="@color/colorPrimary"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.17"
+            app:layout_constraintHorizontal_bias="0.533"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/seatsText" />
 
@@ -189,18 +126,22 @@
             android:id="@+id/saveButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="80dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:text="Guardar"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="@color/btnRequest"
+            android:bottomLeftRadius="5dp"
+            android:bottomRightRadius="5dp"
+            android:padding="10dp"
+            android:text="GUARDAR"
+            android:textAlignment="center"
+            android:textColor="@color/mainTextColor"
+            android:textSize="20sp"
+            android:topLeftRadius="5dp"
+            android:topRightRadius="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.986" />
+            app:layout_constraintTop_toBottomOf="@+id/canTakePets" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
