--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -12,191 +12,212 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorAccent"
+        android:background="@drawable/back"
         tools:context=".ProfileActivity">
 
-        <EditText
+
+        <com.gcherubini.animatedexpandableedittext.AnimatedExpandableEditText
             android:id="@+id/usernameText"
-            android:layout_width="300dp"
-            android:layout_height="40dp"
+            android:layout_width="380dp"
+            android:layout_height="35dp"
             android:layout_alignEnd="@+id/imageView9"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="44dp"
+            android:layout_marginTop="2dp"
             android:layout_marginEnd="8dp"
-            android:background="#11000000"
+            android:background="@drawable/edit_text_bg"
+            android:bottomLeftRadius="5dp"
+            android:bottomRightRadius="5dp"
             android:drawableLeft="@drawable/ic_action_name"
             android:ems="10"
-            android:enabled="false"
             android:hint=" Username"
             android:inputType="textPersonName"
             android:padding="8dp"
             android:textSize="18sp"
+            android:topLeftRadius="5dp"
+            android:topRightRadius="5dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.494"
+            app:layout_constraintHorizontal_bias="0.466"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/lastNameText" />
 
-        <EditText
+        <com.gcherubini.animatedexpandableedittext.AnimatedExpandableEditText
             android:id="@+id/nameText"
-            android:layout_width="184dp"
-            android:layout_height="40dp"
+            android:layout_width="380dp"
+            android:layout_height="35dp"
             android:layout_alignEnd="@+id/imageView9"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="84dp"
-            android:layout_marginEnd="28dp"
-            android:background="#11000000"
+            android:layout_marginTop="52dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/edit_text_bg"
             android:drawableLeft="@drawable/ic_action_face"
             android:ems="10"
-            android:enabled="false"
             android:hint=" Nome"
             android:inputType="textPersonName"
             android:padding="8dp"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.813"
-            app:layout_constraintStart_toEndOf="@+id/circleImageView"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintHorizontal_bias="0.533"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/circleImageView"
+            android:bottomRightRadius="5dp"
+            android:bottomLeftRadius="5dp"
+            android:topLeftRadius="5dp"
+            android:topRightRadius="5dp"/>
 
-        <EditText
+        <com.gcherubini.animatedexpandableedittext.AnimatedExpandableEditText
             android:id="@+id/lastNameText"
-            android:layout_width="184dp"
-            android:layout_height="40dp"
+            android:layout_width="380dp"
+            android:layout_height="35dp"
             android:layout_alignEnd="@+id/imageView9"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="28dp"
-            android:background="#11000000"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/edit_text_bg"
+            android:bottomLeftRadius="5dp"
+            android:bottomRightRadius="5dp"
             android:drawableLeft="@drawable/ic_action_face"
             android:ems="10"
-            android:enabled="false"
-            android:hint=" Nome"
+            android:hint="Último  Nome"
             android:inputType="textPersonName"
             android:padding="8dp"
             android:textSize="18sp"
+            android:topLeftRadius="5dp"
+            android:topRightRadius="5dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.813"
-            app:layout_constraintStart_toEndOf="@+id/circleImageView"
+            app:layout_constraintHorizontal_bias="0.533"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nameText" />
 
-        <EditText
+        <com.gcherubini.animatedexpandableedittext.AnimatedExpandableEditText
             android:id="@+id/emailText"
-            android:layout_width="300dp"
-            android:layout_height="40dp"
+            android:layout_width="380dp"
+            android:layout_height="35dp"
             android:layout_alignEnd="@+id/imageView9"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="2dp"
             android:layout_marginEnd="8dp"
-            android:background="#11000000"
+            android:background="@drawable/edit_text_bg"
+            android:bottomLeftRadius="5dp"
+            android:bottomRightRadius="5dp"
             android:drawableLeft="@drawable/ic_action_email"
             android:ems="10"
-            android:enabled="false"
             android:hint=" E-mail"
             android:inputType="textEmailSubject"
             android:padding="8dp"
             android:textSize="18sp"
+            android:topLeftRadius="5dp"
+            android:topRightRadius="5dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.494"
+            app:layout_constraintHorizontal_bias="0.533"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/usernameText" />
 
-        <EditText
+        <com.gcherubini.animatedexpandableedittext.AnimatedExpandableEditText
             android:id="@+id/phoneText"
-            android:layout_width="300dp"
-            android:layout_height="40dp"
+            android:layout_width="380dp"
+            android:layout_height="35dp"
             android:layout_alignEnd="@+id/imageView9"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="2dp"
             android:layout_marginEnd="8dp"
-            android:background="#11000000"
+            android:background="@drawable/edit_text_bg"
+            android:bottomLeftRadius="5dp"
+            android:bottomRightRadius="5dp"
             android:drawableLeft="@drawable/ic_action_phone"
             android:ems="10"
-            android:enabled="false"
             android:hint=" Telemóvel"
             android:inputType="phone"
             android:padding="8dp"
+            android:topLeftRadius="5dp"
+            android:topRightRadius="5dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.494"
+            app:layout_constraintHorizontal_bias="0.533"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/emailText" />
 
 
-        <EditText
+        <com.gcherubini.animatedexpandableedittext.AnimatedExpandableEditText
             android:id="@+id/musicText"
-            android:layout_width="300dp"
-            android:layout_height="60dp"
+            android:layout_width="380dp"
+            android:layout_height="35dp"
             android:layout_alignEnd="@+id/imageView9"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="2dp"
             android:layout_marginEnd="8dp"
-            android:background="#11000000"
+            android:background="@drawable/edit_text_bg"
+            android:bottomLeftRadius="5dp"
+            android:bottomRightRadius="5dp"
             android:drawableLeft="@drawable/ic_action_music"
             android:ems="10"
-            android:enabled="false"
             android:hint=" Músicos Preferidos"
             android:inputType="textMultiLine"
             android:padding="8dp"
+            android:topLeftRadius="5dp"
+            android:topRightRadius="5dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.494"
+            app:layout_constraintHorizontal_bias="0.533"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/phoneText" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/circleImageView"
-            android:layout_width="119dp"
-            android:layout_height="117dp"
+            android:layout_width="140dp"
+            android:layout_height="134dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="68dp"
+            android:layout_marginTop="36dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
             app:civ_border_color="@color/colorPrimary"
             app:civ_border_width="3dp"
-            app:layout_constraintBottom_toTopOf="@+id/lastNameText"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.076"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
-            android:layout_width="wrap_content"
+            android:layout_width="38dp"
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
             android:layout_margin="16dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="48dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="28dp"
             android:layout_marginBottom="8dp"
             android:src="@drawable/ic_mode_edit_black_24dp"
             app:backgroundTint="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.938"
+            app:layout_constraintHorizontal_bias="0.94"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/musicText"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.219" />
 
         <Button
             android:id="@+id/saveButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="44dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:text="Guardar"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/fab"
-            app:layout_constraintHorizontal_bias="0.549"
+            android:background="@color/btnRequest"
+            android:padding="10dp"
+            android:text="GUARDAR"
+            android:textAlignment="center"
+            android:textColor="@color/mainTextColor"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/musicText"
-            app:layout_constraintVertical_bias="0.065" />
+            android:bottomRightRadius="5dp"
+            android:bottomLeftRadius="5dp"
+            android:topLeftRadius="5dp"
+            android:topRightRadius="5dp"/>
 
     </android.support.constraint.ConstraintLayout>
 </FrameLayout>
