--- a/app/src/main/res/layout/fragment_car.xml
+++ b/app/src/main/res/layout/fragment_car.xml
@@ -12,61 +12,7 @@
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/back">
-
-        <com.gcherubini.animatedexpandableedittext.AnimatedExpandableEditText
-            android:id="@+id/brandText"
-            android:layout_width="380dp"
-            android:layout_height="35dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="100dp"
-            android:layout_marginEnd="8dp"
-            android:background="@drawable/edit_text_bg"
-            android:ems="10"
-            android:hint="Marca"
-            android:inputType="textPersonName"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.533"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <com.gcherubini.animatedexpandableedittext.AnimatedExpandableEditText
-            android:id="@+id/modelText"
-            android:layout_width="380dp"
-            android:layout_height="35dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginEnd="8dp"
-            android:background="@drawable/edit_text_bg"
-            android:ems="10"
-            android:hint="Modelo"
-            android:inputType="textPersonName"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.533"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/brandText" />
-
-        <com.gcherubini.animatedexpandableedittext.AnimatedExpandableEditText
-            android:id="@+id/seatsText"
-            android:layout_width="380dp"
-            android:layout_height="35dp"
-            android:layout_alignStart="@+id/brandText"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginEnd="8dp"
-            android:background="@drawable/edit_text_bg"
-            android:ems="10"
-            android:hint="Lugares"
-            android:inputType="textPersonName"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.533"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/modelText" />
+        android:background="@color/colorAccent">
 
         <Switch
             android:id="@+id/canSmoke"
@@ -74,7 +20,7 @@
             android:layout_height="31dp"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_toEndOf="@+id/modelText"
             android:text="Fumador"
@@ -84,7 +30,99 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.48"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/seatsText" />
+
+        <com.gcherubini.animatedexpandableedittext.AnimatedExpandableEditText
+            android:id="@+id/seatsText"
+            android:layout_width="350dp"
+            android:layout_height="35dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/edit_text_bg"
+            android:bottomLeftRadius="5dp"
+            android:bottomRightRadius="5dp"
+            android:ems="10"
+            android:hint=" Lugares"
+            android:inputType="textPersonName"
+            android:padding="8dp"
+            android:textSize="18sp"
+            android:topLeftRadius="5dp"
+            android:topRightRadius="5dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.488"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/plateText" />
+
+        <com.gcherubini.animatedexpandableedittext.AnimatedExpandableEditText
+            android:id="@+id/modelText"
+            android:layout_width="350dp"
+            android:layout_height="35dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/edit_text_bg"
+            android:bottomLeftRadius="5dp"
+            android:bottomRightRadius="5dp"
+            android:ems="10"
+            android:hint=" Modelo"
+            android:inputType="textPersonName"
+            android:padding="8dp"
+            android:textSize="18sp"
+            android:topLeftRadius="5dp"
+            android:topRightRadius="5dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.488"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/brandText" />
+
+        <com.gcherubini.animatedexpandableedittext.AnimatedExpandableEditText
+            android:id="@+id/plateText"
+            android:layout_width="350dp"
+            android:layout_height="35dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/edit_text_bg"
+            android:bottomLeftRadius="5dp"
+            android:bottomRightRadius="5dp"
+            android:ems="10"
+            android:hint=" Matrícula"
+            android:inputType="textPersonName"
+            android:padding="8dp"
+            android:textSize="18sp"
+            android:topLeftRadius="5dp"
+            android:topRightRadius="5dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.488"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/modelText" />
+
+        <com.gcherubini.animatedexpandableedittext.AnimatedExpandableEditText
+            android:id="@+id/brandText"
+            android:layout_width="350dp"
+            android:layout_height="35dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="92dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/edit_text_bg"
+            android:bottomLeftRadius="5dp"
+            android:bottomRightRadius="5dp"
+            android:ems="10"
+            android:hint=" Marca"
+            android:inputType="textPersonName"
+            android:padding="8dp"
+            android:textSize="18sp"
+            android:topLeftRadius="5dp"
+            android:topRightRadius="5dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.488"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Switch
             android:id="@+id/canTakePets"
@@ -93,7 +131,7 @@
             android:layout_alignStart="@+id/canSmoke"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
             android:text="Possível levar Animais"
             android:textAlignment="viewStart"
@@ -104,30 +142,30 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/canSmoke" />
 
-        <com.gcherubini.animatedexpandableedittext.AnimatedExpandableEditText
-            android:id="@+id/plateText"
-            android:layout_width="380dp"
-            android:layout_height="35dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignRight="@+id/saveButton"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:background="@drawable/edit_text_bg"
-            android:ems="10"
-            android:hint="Lugares"
-            android:inputType="textPersonName"
+            android:background="@color/toolbar"
+            android:clickable="true"
+            android:src="@drawable/ic_mode_edit_black_24dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.533"
+            app:layout_constraintHorizontal_bias="0.904"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/seatsText" />
+            app:layout_constraintTop_toBottomOf="@+id/canTakePets"
+            app:layout_constraintVertical_bias="0.081" />
 
         <Button
             android:id="@+id/saveButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:background="@color/btnRequest"
             android:bottomLeftRadius="5dp"
@@ -142,24 +180,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/canTakePets" />
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:background="@color/colorPrimary"
-            android:clickable="true"
-            android:src="@drawable/ic_mode_edit_black_24dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.808"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/canTakePets"
-            app:layout_constraintVertical_bias="0.331" />
 
     </android.support.constraint.ConstraintLayout>
 
