--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -11,9 +11,11 @@
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="@color/item_fragment"
         app:tabSelectedTextColor="@android:color/white"
-        app:tabTextColor="@android:color/black">
+        app:tabTextColor="@android:color/black"
+        app:tabIndicatorColor="@android:color/white"
+        app:tabIndicatorHeight="2dp">
 
         <android.support.design.widget.TabItem
             android:id="@+id/pefilTab"
