--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.ProfileFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -12,13 +12,58 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/back"
+        android:background="@color/colorAccent"
         tools:context=".ProfileActivity">
 
 
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardView"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            app:cardElevation="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/back"
+                android:gravity="center_horizontal">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/circleImageView"
+                    android:layout_width="140dp"
+                    android:layout_height="134dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="8dp"
+                    app:civ_border_color="@color/colorPrimary"
+                    app:civ_border_width="3dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.498"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/fullNameText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/circleImageView"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="20dp"
+                    android:fontFamily="@font/lato"
+                    android:text="TextView"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="18sp" />
+            </RelativeLayout>
+
+        </android.support.v7.widget.CardView>
+
         <com.gcherubini.animatedexpandableedittext.AnimatedExpandableEditText
             android:id="@+id/usernameText"
-            android:layout_width="380dp"
+            android:layout_width="350dp"
             android:layout_height="35dp"
             android:layout_alignEnd="@+id/imageView9"
             android:layout_alignParentBottom="true"
@@ -30,6 +75,7 @@
             android:bottomRightRadius="5dp"
             android:drawableLeft="@drawable/ic_action_name"
             android:ems="10"
+            android:fontFamily="@font/latoregular"
             android:hint=" Username"
             android:inputType="textPersonName"
             android:padding="8dp"
@@ -43,32 +89,33 @@
 
         <com.gcherubini.animatedexpandableedittext.AnimatedExpandableEditText
             android:id="@+id/nameText"
-            android:layout_width="380dp"
+            android:layout_width="350dp"
             android:layout_height="35dp"
             android:layout_alignEnd="@+id/imageView9"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="52dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/edit_text_bg"
+            android:bottomLeftRadius="5dp"
+            android:bottomRightRadius="5dp"
             android:drawableLeft="@drawable/ic_action_face"
             android:ems="10"
+            android:fontFamily="@font/latoregular"
             android:hint=" Nome"
             android:inputType="textPersonName"
             android:padding="8dp"
             android:textSize="18sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.533"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/circleImageView"
-            android:bottomRightRadius="5dp"
-            android:bottomLeftRadius="5dp"
             android:topLeftRadius="5dp"
-            android:topRightRadius="5dp"/>
+            android:topRightRadius="5dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.466"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
         <com.gcherubini.animatedexpandableedittext.AnimatedExpandableEditText
             android:id="@+id/lastNameText"
-            android:layout_width="380dp"
+            android:layout_width="350dp"
             android:layout_height="35dp"
             android:layout_alignEnd="@+id/imageView9"
             android:layout_alignParentBottom="true"
@@ -80,6 +127,7 @@
             android:bottomRightRadius="5dp"
             android:drawableLeft="@drawable/ic_action_face"
             android:ems="10"
+            android:fontFamily="@font/latoregular"
             android:hint="Último  Nome"
             android:inputType="textPersonName"
             android:padding="8dp"
@@ -87,13 +135,13 @@
             android:topLeftRadius="5dp"
             android:topRightRadius="5dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.533"
+            app:layout_constraintHorizontal_bias="0.466"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nameText" />
 
         <com.gcherubini.animatedexpandableedittext.AnimatedExpandableEditText
             android:id="@+id/emailText"
-            android:layout_width="380dp"
+            android:layout_width="350dp"
             android:layout_height="35dp"
             android:layout_alignEnd="@+id/imageView9"
             android:layout_alignParentBottom="true"
@@ -105,6 +153,7 @@
             android:bottomRightRadius="5dp"
             android:drawableLeft="@drawable/ic_action_email"
             android:ems="10"
+            android:fontFamily="@font/latoregular"
             android:hint=" E-mail"
             android:inputType="textEmailSubject"
             android:padding="8dp"
@@ -112,13 +161,13 @@
             android:topLeftRadius="5dp"
             android:topRightRadius="5dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.533"
+            app:layout_constraintHorizontal_bias="0.466"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/usernameText" />
 
         <com.gcherubini.animatedexpandableedittext.AnimatedExpandableEditText
             android:id="@+id/phoneText"
-            android:layout_width="380dp"
+            android:layout_width="350dp"
             android:layout_height="35dp"
             android:layout_alignEnd="@+id/imageView9"
             android:layout_alignParentBottom="true"
@@ -130,20 +179,21 @@
             android:bottomRightRadius="5dp"
             android:drawableLeft="@drawable/ic_action_phone"
             android:ems="10"
+            android:fontFamily="@font/latoregular"
             android:hint=" Telemóvel"
             android:inputType="phone"
             android:padding="8dp"
             android:topLeftRadius="5dp"
             android:topRightRadius="5dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.533"
+            app:layout_constraintHorizontal_bias="0.466"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/emailText" />
 
 
         <com.gcherubini.animatedexpandableedittext.AnimatedExpandableEditText
             android:id="@+id/musicText"
-            android:layout_width="380dp"
+            android:layout_width="350dp"
             android:layout_height="35dp"
             android:layout_alignEnd="@+id/imageView9"
             android:layout_alignParentBottom="true"
@@ -155,69 +205,55 @@
             android:bottomRightRadius="5dp"
             android:drawableLeft="@drawable/ic_action_music"
             android:ems="10"
+            android:fontFamily="@font/latoregular"
             android:hint=" Músicos Preferidos"
             android:inputType="textMultiLine"
             android:padding="8dp"
             android:topLeftRadius="5dp"
             android:topRightRadius="5dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.533"
+            app:layout_constraintHorizontal_bias="0.466"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/phoneText" />
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/circleImageView"
-            android:layout_width="140dp"
-            android:layout_height="134dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="36dp"
-            android:layout_marginEnd="8dp"
-            app:civ_border_color="@color/colorPrimary"
-            app:civ_border_width="3dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="38dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|bottom"
-            android:layout_margin="16dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="28dp"
-            android:layout_marginBottom="8dp"
-            android:src="@drawable/ic_mode_edit_black_24dp"
-            app:backgroundTint="@color/colorPrimary"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.94"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/musicText"
-            app:layout_constraintVertical_bias="0.219" />
 
         <Button
             android:id="@+id/saveButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="44dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="8dp"
             android:background="@color/btnRequest"
+            android:bottomLeftRadius="5dp"
+            android:bottomRightRadius="5dp"
             android:padding="10dp"
             android:text="GUARDAR"
             android:textAlignment="center"
             android:textColor="@color/mainTextColor"
             android:textSize="20sp"
+            android:topLeftRadius="5dp"
+            android:topRightRadius="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/musicText" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@color/toolbar"
+            android:clickable="true"
+            android:src="@drawable/ic_mode_edit_black_24dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.585"
+            app:layout_constraintStart_toEndOf="@+id/saveButton"
             app:layout_constraintTop_toBottomOf="@+id/musicText"
-            android:bottomRightRadius="5dp"
-            android:bottomLeftRadius="5dp"
-            android:topLeftRadius="5dp"
-            android:topRightRadius="5dp"/>
+            app:layout_constraintVertical_bias="0.158" />
 
     </android.support.constraint.ConstraintLayout>
 </FrameLayout>
