--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="176dp"
-    android:background="@drawable/back" android:gravity="bottom"
-    android:padding="16dp" android:theme="@style/ThemeOverlay.AppCompat.Dark"
-    >
+    android:background="@color/toolbar"
+    android:gravity="bottom"
+    android:orientation="vertical"
+    android:padding="16dp"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/menu_profile"
         android:layout_width="72dp"
         android:layout_height="72dp"
         android:src="@mipmap/ic_launcher_round"
-        app:civ_border_color="@color/colorPrimary" />
-    
+        app:civ_border_color="#03a9f4" />
+
     <TextView
-    android:id="@+id/menu_name"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:paddingTop="8dp"
+        android:id="@+id/menu_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:paddingLeft="2dp"
-    android:text=""
-    />
+        android:paddingTop="8dp"
+        android:text="" />
 
 </LinearLayout>
