--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,9 +6,26 @@
         <item name="android:itemBackground">@color/colorAccent</item>
         <item name="android:actionMenuTextColor">@color/colorPrimaryDark</item>
         <item name="android:statusBarColor"> @android:color/transparent</item>
+        <item name="android:actionModeBackground">@color/toolbar</item>
     </style>
 
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
 
+        <item name="colorPrimary">@color/toolbar</item>
+        <item name="colorPrimaryDark">@color/status_bar</item>
+
+    </style>
+
+    <style name="MainTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:statusBarColor"> @color/status_bar</item>
+    </style>
+
+    <style name="TextAppearance.AppCompat.Widget.ActionBar.Title." parent="@android:style/TextAppearance">
+
+        <item name="android:textSize">30dp</item>
+        <item name="android:textColor">@color/colorAccent</item>
+
+    </style>
 
     <style name="ContentImageBadgeTitle" parent="AppTheme">
         <item name="android:alpha">0.5</item>
@@ -19,8 +36,6 @@
     <style name="ContentImageBadgeText" parent="AppTheme">
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">20dp</item>
-
-
     </style>
 
     <style name="ContentMainBadgeTitle" parent="AppTheme">
