Improving Offer a ride page

--- a/app/src/main/res/layout/activity_time_trip.xml
+++ b/app/src/main/res/layout/activity_time_trip.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,10 +8,22 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/partidaTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/latoblack"
+            android:paddingLeft="5dp"
+            android:paddingTop="20dp"
+            android:paddingRight="5dp"
+            android:text="@string/earlyGo"
+            android:textAlignment="center"
+            android:textSize="18sp" />
 
         <TimePicker
             android:id="@+id/startTimePicker"
@@ -21,6 +34,16 @@
             android:layout_marginBottom="23dp"
             android:timePickerMode="spinner" />
 
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/latoblack"
+            android:padding="2dp"
+            android:text="@string/lateGo"
+            android:textAlignment="center"
+            android:textSize="18sp" />
+
         <TimePicker
             android:id="@+id/endTimePicker"
             android:layout_width="match_parent"
@@ -30,17 +53,17 @@
             android:layout_marginBottom="23dp"
             android:timePickerMode="spinner" />
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-
         <Button
             android:id="@+id/button"
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:text="Confirmar" />
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/rounded_button"
+            android:elevation="10dp"
+            android:fontFamily="@font/latobold"
+            android:text="Confirmar"
+            android:textColor="@color/bgContent"
+            android:textSize="16sp" />
     </LinearLayout>
 
 
