--- a/app/src/main/res/layout/activity_from.xml
+++ b/app/src/main/res/layout/activity_from.xml
@@ -6,15 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".Activities.FromActivity">
 
-    <com.mancj.materialsearchbar.MaterialSearchBar
-        android:id="@+id/searchBar"
-        style="@style/MaterialSearchBarLight"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="191dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="134dp"
+        android:layout_marginTop="56dp"
+        android:layout_marginEnd="129dp"
+        android:fontFamily="@font/latoblack"
+        android:text="@string/pickup"
+        android:textAlignment="center"
+        android:textSize="18sp" />
+
+    <com.mancj.materialsearchbar.MaterialSearchBar
+        android:id="@+id/searchBar"
+        style="@style/MyCustomTheme"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="202dp"
         app:mt_hint="Custom hint"
         app:mt_maxSuggestionsCount="10" />
 
