--- a/app/src/main/res/layout/activity_seats.xml
+++ b/app/src/main/res/layout/activity_seats.xml
@@ -8,7 +8,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
-        android:id="@+id/priceText"
+        android:id="@+id/seatsText"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -18,7 +18,7 @@
         android:clickable="false"
         android:ems="10"
         android:inputType="number"
-        android:text="@string/price"
+        android:text="3"
         android:textAlignment="center"
         android:textSize="30sp"
         tools:layout_editor_absoluteX="98dp"
@@ -38,20 +38,11 @@
         android:textColor="@color/bgContent"
         android:textSize="16sp" />
 
-    <TextView
-        android:id="@+id/routeText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="196dp"
-        android:textSize="16sp" />
-
     <ImageView
         android:id="@+id/remove"
         android:layout_width="42dp"
         android:layout_height="40dp"
-        android:layout_alignTop="@+id/priceText"
+        android:layout_alignTop="@+id/seatsText"
         android:layout_alignParentStart="true"
         android:layout_marginStart="92dp"
         android:layout_marginTop="2dp"
@@ -62,7 +53,7 @@
         android:id="@+id/add"
         android:layout_width="42dp"
         android:layout_height="40dp"
-        android:layout_alignTop="@+id/priceText"
+        android:layout_alignTop="@+id/seatsText"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="0dp"
         android:layout_marginEnd="93dp"
