--- a/app/src/main/res/layout/activity_trip_data.xml
+++ b/app/src/main/res/layout/activity_trip_data.xml
@@ -3,37 +3,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     tools:context=".Activities.TripDataActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="11dp"
-        android:layout_marginBottom="530dp"
-        android:textAlignment="center"
-        android:textColor="@color/colorPrimary" />
-
-    <com.archit.calendardaterangepicker.customviews.DateRangeCalendarView
-        android:id="@+id/calendar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+    <LinearLayout
+        android:layout_width="350dp"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="91dp" />
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginBottom="16dp"
-        android:text="Confirmar" />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/latoblack"
+            android:text="@string/calendar_selection"
+            android:textAlignment="center"
+            android:textSize="18sp" />
+
+        <com.archit.calendardaterangepicker.customviews.DateRangeCalendarView
+            android:id="@+id/calendar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="91dp"
+            custom:disable_date_color="#ABABAB"
+            custom:header_bg="@drawable/calendar_header"
+            custom:range_color="@color/range_color"
+            custom:selected_date_circle_color="@color/selected_date_circle_color"
+            custom:title_color="@color/calendar_header_title">
+
+        </com.archit.calendardaterangepicker.customviews.DateRangeCalendarView>
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="false"
+            android:layout_alignParentBottom="false"
+            android:layout_centerInParent="false"
+            android:layout_centerHorizontal="false"
+            android:layout_centerVertical="false"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/rounded_button"
+            android:fontFamily="@font/latobold"
+            android:text="Confirmar"
+            android:textColor="@color/bgContent"
+            android:textSize="16sp" />
+
+    </LinearLayout>
 
 
 </RelativeLayout>
