Forgot Password attempet

--- a/app/src/main/res/layout/activity_from.xml
+++ b/app/src/main/res/layout/activity_from.xml
@@ -6,31 +6,40 @@
     android:layout_height="match_parent"
     tools:context=".Activities.FromActivity">
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="134dp"
-        android:layout_marginTop="56dp"
-        android:layout_marginEnd="129dp"
-        android:fontFamily="@font/latoblack"
-        android:text="@string/pickup"
-        android:textAlignment="center"
-        android:textSize="18sp" />
 
-    <com.mancj.materialsearchbar.MaterialSearchBar
-        android:id="@+id/searchBar"
-        style="@style/MyCustomTheme"
+    <LinearLayout
         android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="202dp"
-        app:mt_hint="Custom hint"
-        app:mt_maxSuggestionsCount="10" />
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="134dp"
+            android:layout_marginTop="56dp"
+            android:layout_marginEnd="129dp"
+            android:fontFamily="@font/latoblack"
+            android:text="@string/pickup"
+            android:textAlignment="center"
+            android:textSize="18sp" />
+
+        <com.mancj.materialsearchbar.MaterialSearchBar
+            android:id="@+id/searchBar"
+            style="@style/MyCustomTheme"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="100dp"
+            app:mt_hint="Custom hint"
+            app:mt_maxSuggestionsCount="10" />
+
+    </LinearLayout>
 
 </RelativeLayout>
