--- a/app/src/main/res/layout/activity_price.xml
+++ b/app/src/main/res/layout/activity_price.xml
@@ -7,22 +7,54 @@
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@+id/priceText"
-        android:layout_width="100dp"
+
+    <RelativeLayout
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="156dp"
-        android:layout_marginTop="192dp"
-        android:clickable="false"
-        android:ems="10"
-        android:inputType="number"
-        android:text="@string/price"
-        android:textAlignment="center"
-        android:textSize="30sp"
-        tools:layout_editor_absoluteX="98dp"
-        tools:layout_editor_absoluteY="162dp" />
+        android:layout_centerHorizontal="true"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/remove"
+            android:layout_width="42dp"
+            android:layout_height="40dp"
+            android:layout_alignTop="@+id/priceText"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="61dp"
+            android:layout_marginTop="0dp"
+            android:adjustViewBounds="false"
+            android:visibility="visible"
+            app:srcCompat="@drawable/ic_remove_circle_outline_black_24dp" />
+
+        <ImageView
+            android:id="@+id/add"
+            android:layout_width="42dp"
+            android:layout_height="40dp"
+            android:layout_alignTop="@+id/priceText"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="61dp"
+            app:srcCompat="@drawable/ic_add_circle_outline_black_24dp" />
+
+        <TextView
+            android:id="@+id/priceText"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="false"
+            android:layout_alignParentTop="false"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="192dp"
+            android:clickable="false"
+            android:ems="10"
+            android:inputType="number"
+            android:text="@string/price"
+            android:textAlignment="center"
+            android:textSize="30sp"
+            tools:layout_editor_absoluteX="98dp"
+            tools:layout_editor_absoluteY="162dp" />
+
+    </RelativeLayout>
 
     <Button
         android:id="@+id/button"
@@ -46,26 +78,5 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="196dp"
         android:textSize="16sp" />
-
-    <ImageView
-        android:id="@+id/remove"
-        android:layout_width="42dp"
-        android:layout_height="40dp"
-        android:layout_alignTop="@+id/priceText"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="92dp"
-        android:layout_marginTop="2dp"
-        android:visibility="visible"
-        app:srcCompat="@drawable/ic_remove_circle_outline_black_24dp" />
-
-    <ImageView
-        android:id="@+id/add"
-        android:layout_width="42dp"
-        android:layout_height="40dp"
-        android:layout_alignTop="@+id/priceText"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="93dp"
-        app:srcCompat="@drawable/ic_add_circle_outline_black_24dp" />
 
 </RelativeLayout>
